# bc250gov

./: CMakeLists.txt  README.md  amdgpu.c  config.yaml  gpu.c  gpu.h  main.c  main.cpp  shell.nix
.cache/clangd/index/: cmd.hpp.068D0670A8615C50.idx  config.cpp.44AE4D9B885A77EB.idx  config.hpp.88697A16B8A86757.idx  main.cpp.91430C623E9B6B56.idx  policy.hpp.4C4F94C58C3EB6FC.idx  smu.hpp.14E10A23727595BF.idx  status.hpp.3689000C04802DD7.idx  transport.hpp.C485CE62EDD9CDA1.idx
src/: config.cpp  config.hpp  gpu.cpp  gpu.hpp  main.cpp
src/idle/: policy.cpp  policy.hpp
src/smu/: cmd.cpp  cmd.hpp  codec.cpp  codec.hpp  smu.cpp  smu.hpp  status.cpp  status.hpp  transport.cpp  transport.hpp
